--- a/docker/php.ini
+++ b/docker/php.ini
@@ -2,3 +2,14 @@
 post_max_size = 100M
 upload_max_filesize = 100M
 variables_order = EGPCS
+
+[opcache]
+opcache.enable=1
+opcache.revalidate_freq=0
+opcache.memory_consumption=256
+opcache.max_wasted_percentage=5
+opcache.interned_strings_buffer=64
+opcache.max_accelerated_files=10000
+opcache.validate_timestamps=0
+opcache.save_comments=1
+opcache.fast_shutdown=1
