--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
-APP_KEY=base64:khEvAIeyukNnYq9FTwEQoPkmNJ3mkkrS09iwc1YWlwY=
-APP_DEBUG=true
+APP_KEY=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -12,14 +12,14 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel9_docker
-DB_USERNAME=sail
+DB_USERNAME=root
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=memcached
